--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         /* Use Miniver as the default font */
         body {
-            font-family: 'Playwrite México Guides', cursive;
+            font-family: 'Playwrite México Guides';
         }
         /* A little sparkle effect for the background */
         body::before {
